<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.payment.BankFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardIssuersTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.ExposedDropdownMenu"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/card_issuers"
            android:hint="@string/card_issuers_hint">

            <AutoCompleteTextView
                android:id="@+id/bank_filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/installmentsTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.ExposedDropdownMenu"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            app:layout_constraintTop_toBottomOf="@+id/cardIssuersTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/installments"
            android:hint="@string/installments_hint">

            <AutoCompleteTextView
                android:id="@+id/account_type_filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueButton"
            style="@style/AppTheme.ButtonPrimary"
            android:text="@string/continue_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>